--- a/app/views/layouts/rails_observatory/application.html.erb
+++ b/app/views/layouts/rails_observatory/application.html.erb
@@ -30,6 +30,8 @@
 
         this.chart = new Apexcharts(this.chartTarget, {
           chart: {
+            id: this.element.id,
+            group: 'requests',
             type: this.typeValue,
             height: 250,
             animations: {
@@ -37,8 +39,20 @@
             },
             toolbar: {
               show: false
+            },
+          },
+          title: {
+            text: this.element.dataset.chartName,
+            align: 'left',
+            offsetY: 20,
+            style: {
+              fontSize: '1rem',
+              fontWeight: 500,
+              fontFamily: 'inherit',
+              color: 'var(--white)'
             }
           },
+          colors: ["#7209b7"],
           grid: {
             borderColor: 'var(--divider)',
             strokeDashArray: 4,
@@ -64,21 +78,46 @@
             type: 'datetime',
             min: <%= @time_range.begin.to_i * 1000 %>,
             max: <%= (@time_range.end.nil? ? Time.now.to_i : @time_range.end.to_i) * 1000 %>,
-            style: {
-              colors: 'var(--gray)',
-              fontSize: '0.75rem',
-              fontFamily: 'var(--font-mono)'
+            axisBorder: {
+              show: false,
+            },
+            axisTicks: {
+              show: false
+            },
+            crosshairs: {
+              width: 1
+            },
+          },
+
+          yaxis: {
+            decimalsInFloat: 0,
+            labels: {
+              // offsetX: -40,
+            },
+            axisTicks: {
+              show: false
             },
           },
           dataLabels: {
             enabled: false
           },
-          theme: {
-            palette: this.paletteValue
+          fill: {
+            gradient: {
+              enabled: true,
+              opacityFrom: 0.55,
+              opacityTo: 0
+            }
           },
-          yaxis: {decimalsInFloat: 0},
+          theme: {
+            monochrome: {
+              enabled: true,
+              color: '#0c8be8',
+              shadeTo: 'dark',
+              shadeIntensity: 0.65
+            }
+          },
           stroke: {
-            width: 2,
+            width: 3,
             curve: 'straight'
           },
           tooltip: {
@@ -231,8 +270,8 @@
       flex-direction: column;
       gap: 1rem;
       align-items: stretch;
-      background: rgb(0,144,255);
-      background: radial-gradient(ellipse 100% 4rem at top, rgba(0,144,255,0.4) 0%, rgba(22,26,29,1) 100%);
+      background: rgb(0, 144, 255);
+      background: radial-gradient(ellipse 100% 4rem at top, rgba(0, 144, 255, 0.4) 0%, rgba(22, 26, 29, 1) 100%);
 
       ._active {
         background-color: var(--blue);
@@ -285,7 +324,7 @@
     .top-nav {
       grid-area: top-nav;
       border-bottom: 1px solid var(--divider);
-      padding: 1rem;
+      padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -383,10 +422,11 @@
         Logs
       <% end %></li>
     <li><%= link_to errors_path, class: "#{'_active' if request.path =~ /errors/}" do %>
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M12 12.75c1.148 0 2.278.08 3.383.237 1.037.146 1.866.966 1.866 2.013 0 3.728-2.35 6.75-5.25 6.75S6.75 18.728 6.75 15c0-1.046.83-1.867 1.866-2.013A24.204 24.204 0 0112 12.75zm0 0c2.883 0 5.647.508 8.207 1.44a23.91 23.91 0 01-1.152 6.06M12 12.75c-2.883 0-5.647.508-8.208 1.44.125 2.104.52 4.136 1.153 6.06M12 12.75a2.25 2.25 0 002.248-2.354M12 12.75a2.25 2.25 0 01-2.248-2.354M12 8.25c.995 0 1.971-.08 2.922-.236.403-.066.74-.358.795-.762a3.778 3.778 0 00-.399-2.25M12 8.25c-.995 0-1.97-.08-2.922-.236-.402-.066-.74-.358-.795-.762a3.734 3.734 0 01.4-2.253M12 8.25a2.25 2.25 0 00-2.248 2.146M12 8.25a2.25 2.25 0 012.248 2.146M8.683 5a6.032 6.032 0 01-1.155-1.002c.07-.63.27-1.222.574-1.747m.581 2.749A3.75 3.75 0 0115.318 5m0 0c.427-.283.815-.62 1.155-.999a4.471 4.471 0 00-.575-1.752M4.921 6a24.048 24.048 0 00-.392 3.314c1.668.546 3.416.914 5.223 1.082M19.08 6c.205 1.08.337 2.187.392 3.314a23.882 23.882 0 01-5.223 1.082" />
-      </svg>
-      Errors<% end %></li>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 12.75c1.148 0 2.278.08 3.383.237 1.037.146 1.866.966 1.866 2.013 0 3.728-2.35 6.75-5.25 6.75S6.75 18.728 6.75 15c0-1.046.83-1.867 1.866-2.013A24.204 24.204 0 0112 12.75zm0 0c2.883 0 5.647.508 8.207 1.44a23.91 23.91 0 01-1.152 6.06M12 12.75c-2.883 0-5.647.508-8.208 1.44.125 2.104.52 4.136 1.153 6.06M12 12.75a2.25 2.25 0 002.248-2.354M12 12.75a2.25 2.25 0 01-2.248-2.354M12 8.25c.995 0 1.971-.08 2.922-.236.403-.066.74-.358.795-.762a3.778 3.778 0 00-.399-2.25M12 8.25c-.995 0-1.97-.08-2.922-.236-.402-.066-.74-.358-.795-.762a3.734 3.734 0 01.4-2.253M12 8.25a2.25 2.25 0 00-2.248 2.146M12 8.25a2.25 2.25 0 012.248 2.146M8.683 5a6.032 6.032 0 01-1.155-1.002c.07-.63.27-1.222.574-1.747m.581 2.749A3.75 3.75 0 0115.318 5m0 0c.427-.283.815-.62 1.155-.999a4.471 4.471 0 00-.575-1.752M4.921 6a24.048 24.048 0 00-.392 3.314c1.668.546 3.416.914 5.223 1.082M19.08 6c.205 1.08.337 2.187.392 3.314a23.882 23.882 0 01-5.223 1.082" />
+        </svg>
+        Errors
+      <% end %></li>
   </ul>
   <div class="_redis-stats">
     <strong>Redis</strong> <%= redis_mem_info['used_memory_human'] %> /
@@ -396,7 +436,10 @@
 <nav class="top-nav">
   <span>
 
-    <h1><span class="_subtitle"><% if content_for? :subtitle %><%= yield :subtitle %> <% end %></span><%= yield :title %></h1>
+    <h1>
+      <span class="_subtitle">
+        <% if content_for? :subtitle %><%= yield :subtitle %>
+        <% end %></span><%= yield :title %></h1>
   </span>
   <div class="dropdown">
     <button class="secondary">
