--- a/app/views/rails_observatory/errors/index.html.erb
+++ b/app/views/rails_observatory/errors/index.html.erb
@@ -19,6 +19,7 @@
       'message graph count';
     grid-template-columns: minmax(14rem, 1fr) auto auto;
     column-gap: 1rem;
+    row-gap: .3rem;
 
     ._name-and-location {
       display: flex;
