--- a/app/views/rails_observatory/jobs/index.html.erb
+++ b/app/views/rails_observatory/jobs/index.html.erb
@@ -9,12 +9,53 @@
   }
 </style>
 
+<%#= render 'chart', name: 'Latency', series: @latency_series, type: 'area', aggregate_using: :avg %>
+<%= render 'chart', name: 'Performed', series: @perform_count, type: 'bar', aggregate_using: :sum %>
+
 <div class="card table">
   <h2>By Queue</h2>
+  <table>
+    <thead>
+    <tr>
+      <th>Queue name</th>
+      <th>Jobs performed</th>
+      <th>Latency</th>
+    </tr>
+    </thead>
+    <tbody>
+    <% @by_queue.each do |s| %>
+      <tr>
+        <td><%= s.queue_name %></td>
+        <td><%= s.value %></td>
+        <td><%= 'tbd' %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
 </div>
 
 <div class="card table">
   <h2>By Job</h2>
+  <table>
+    <thead>
+    <tr>
+      <th>Job name</th>
+      <th>Runs</th>
+      <th>Errors</th>
+      <th>Avg # Retries</th>
+    </tr>
+    </thead>
+    <tbody>
+    <% @by_job.each do |s| %>
+      <tr>
+        <td><%= s.job_class %></td>
+        <td><%= s.value %></td>
+        <td><%= 'tbd' %></td>
+        <td><%= 'tbd' %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
 </div>
 
 <div class="card table">
