--- a/app/views/rails_observatory/requests/show.html.erb
+++ b/app/views/rails_observatory/requests/show.html.erb
@@ -45,7 +45,7 @@
     }
   }
 
-  .headers, .params {
+  .request-headers, .request-params {
     ._arrow-right {
       transform: rotate(0deg);
       transition: transform 100ms linear;
@@ -88,42 +88,6 @@
     }
   }
 
-  .request-stats {
-    display: flex;
-    border-bottom: 1px solid var(--divider);
-    margin: 0;
-
-    ._unit {
-      font-size: 1.3rem;
-      font-weight: 400;
-      margin-left:.25rem;
-      color: var(--black-secondary);
-    }
-
-    & > * {
-      padding: 2rem 2rem;
-      flex-grow: 1;
-
-      & + & {
-        border-left: 1px solid var(--divider);
-      }
-
-      & > dt {
-        font-weight: 400;
-        color: var(--black-secondary);
-        margin-bottom: .75rem;
-      }
-
-      & > dd {
-        font-size: 2.5rem;
-        font-weight: 400;
-        margin: 0;
-        display: flex;
-        align-items: baseline;
-      }
-    }
-  }
-
   h3 {
     font-size: 1.5rem;
     font-weight: 400;
@@ -161,7 +125,7 @@
   <%= @req.controller_action %>
   </span>
 </header>
-<dl class="request-stats">
+<dl class="requests/stats">
   <div>
     <dt>Status</dt>
     <dd><%= @req.payload[:status] %></dd>
@@ -179,7 +143,7 @@
     <dd><%= @req.payload[:db_runtime].to_f.round(2) %><span class="_unit">ms</span></dd>
   </div>
 </dl>
-<details class="headers">
+<details class="request-headers">
   <summary>
     <svg class="_arrow-right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="20">
       <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
@@ -193,7 +157,7 @@
     <% end %>
   </dl>
 </details>
-<details class="params">
+<details class="request-params">
   <summary>
     <svg class="_arrow-right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" width="20">
       <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
