basics for mailers

--- a/app/assets/stylesheets/application/card.css
+++ b/app/assets/stylesheets/application/card.css
@@ -35,11 +35,11 @@
 
       & tr:last-child td {
         border-bottom: none;
-        padding-bottom: 1rem;
+        /*padding-bottom: 1rem;*/
       }
 
       & td {
-        padding: 0.25rem 1rem;
+        padding: .5rem 1rem;
         border-bottom: 1px solid var(--divider);
 
         & + & {
