--- a/app/views/rails_observatory/application/_chart.html.erb
+++ b/app/views/rails_observatory/application/_chart.html.erb
@@ -4,8 +4,8 @@
      data-controller="chart"
      data-chart-name="<%= local_assigns[:name] %>"
      data-chart-type-value="<%= local_assigns[:type] %>"
-     data-chart-start-x-value="<%= series.first.start_time_ms %>"
-     data-chart-end-x-value="<%= series.first.end_time_ms %>">
+     data-chart-start-x-value="<%= series.first&.start_time_ms %>"
+     data-chart-end-x-value="<%= series.first&.end_time_ms %>">
   <% if local_assigns[:series] %>
     <div data-chart-target="chart"></div>
     <% local_assigns[:series].each do |series| %>
